# DiscordChatExporterPy

./: pyproject.toml
chat_exporter/: __init__.py  chat_exporter.py
chat_exporter/construct/: attachment_handler.py  message.py  transcript.py
chat_exporter/construct/assets/: attachment.py  component.py  embed.py
chat_exporter/parse/: mention.py
