[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "chat_exporter"
description = "A simple Discord chat exporter for Python Discord bots."
version = "2.8.4"
readme = "README.md"
authors = [
    { name="mahtoid", email="info@mahto.id" }
]
requires-python = ">=3.12"
license = { text = "GPL-3.0-only" }
classifiers = [
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = ["aiohttp", "pytz", "grapheme", "emoji", "hikari"]
keywords = ["chat exporter", "discord chat exporter", "discord", "hikari"]

[project.urls]
Homepage = "https://github.com/mahtoid/DiscordChatExporterPy"
Discord = "https://discord.mahto.id/"
Donate = "https://ko-fi.com/mahtoid"